[package]
authors = ["chevdor <chevdor@gmail.com>"]
edition = "2021"
name = "gh"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0", features = ["derive", "env", "unicode", "cargo"]}
env_logger = "0.9"
log = "0.4"
regex = "1.5"
webbrowser = "0.5"

[[bin]]
name = "gh"
path = "src/main.rs"
