[package]
authors = ["chevdor <chevdor@gmail.com>"]
edition = "2021"
name = "gho"
version = "0.4.0"
description = "cli to open your repo in the Github/Gitlab web ui"
license = "MIT"
repository = "https://github.com/chevdor/gho"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env", "unicode", "cargo"] }
env_logger = "0.10"
log = "0.4"
regex = "1.5"
webbrowser = "0.8"

[[bin]]
name = "gho"
path = "src/main.rs"
